--- a/3_1/estruturas-pagina/index.html
+++ b/3_1/estruturas-pagina/index.html
@@ -10,6 +10,7 @@
 
 <body data-spy="scroll" data-target="#navbarNav" data-offset="50">
 
+    <img src="imagens/perfil.jpg"
     
     <nav class="navbar navbar-expand-lg">
         <div class="container">
