adicionei os exercícios do bloco 6 dia 3-site 1

--- a/bloco_6/dia_2/form.html
+++ b/bloco_6/dia_2/form.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/bootstrap-datepicker.min.css">
     <script src="js/bootstrap-datepicker.min.js"></script>
     <script src="js/bootstrap-datepicker.pt-BR.min.js"></script>
-    <script src="./path/to/just-validate.min.js"></script>
+    <script src="js/just-validate.min.js"></script>   
     <link rel="stylesheet" href="style.css" type="text/css">
     
 </head>
@@ -53,6 +53,7 @@
         <button class="form__btn btn btn-primary">SUBMIT</button>
       </form>
     <script type="text/javascript" src="script.js"></script>
+    
 </body>
 
 </html>
